# erp-cpp-project

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
data/: UserRepositoryPostgres.cpp  UserRepositoryPostgres.h
docs/html/: index.md
service/: UserService.h
src/: CMakeLists.txt
src/service/: UserService.h
ui/: EditUserDialog.cpp  EditUserDialog.h  UserManagerWidget.cpp  UserManagerWidget.h  main.cpp
